--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -7,3 +7,5 @@
       =haml :clan_competition_trophy
       - @trophy = "most_ascended_combinations"
       =haml :clan_competition_trophy
+      - @trophy = "most_unique_deaths"
+      =haml :clan_competition_trophy
