--- a/views/home.haml
+++ b/views/home.haml
@@ -35,14 +35,8 @@
                 %h3
                     Trophies
                 %ul
-                    - if @user.individualtrophies.count > 0
-                        %li
-                            .trophyleft
-                                Cross-Variant
-                            .trophyright
-                                - for individualtrophy in @user.individualtrophies
-                                    %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
-                                        %img{:src => "/icons/" + individualtrophy.icon, :alt => $trophy_names[individualtrophy.trophy]}
+                    - @player = @user
+                    =haml :user_cross_variant_trophies
                     - unless @user.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
                         %li
                             .trophyleft
