--- a/views/user.haml
+++ b/views/user.haml
@@ -25,14 +25,7 @@
                 %h3
                     Trophies
                 %ul
-                    - if @player.individualtrophies.count > 0
-                        %li
-                            .trophyleft
-                                Cross-Variant
-                            .trophyright
-                                - for individualtrophy in @player.individualtrophies
-                                    %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
-                                        %img{:src => "/icons/" + individualtrophy.icon, :alt => $trophy_names[individualtrophy.trophy]}
+                    =haml :user_cross_variant_trophies
                     - unless @player.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
                         %li
                             .trophyleft
