--- a/views/home.haml
+++ b/views/home.haml
@@ -37,51 +37,11 @@
                 %ul
                     - @player = @user
                     =haml :user_cross_variant_trophies
-                    - unless @user.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
-                        %li
-                            .trophyleft
-                                AceHack
-                            .trophyright
-                                - for scoreentry in @user.scoreentries
-                                    - if scoreentry.variant == "3.6.0"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon}
-                    - unless @user.scoreentries.select{|entry| entry.variant == "3.4.3"}.empty?
-                        %li
-                            .trophyleft
-                                NetHack 3.4.3
-                            .trophyright
-                                - for scoreentry in @user.scoreentries
-                                    - if scoreentry.variant == "3.4.3"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
-                    - unless @user.scoreentries.select{|entry| entry.variant == "UNH-3.5.4"}.empty?
-                        %li
-                            .trophyleft
-                                UnNetHack
-                            .trophyright
-                                - for scoreentry in @user.scoreentries
-                                    - if scoreentry.variant == "UNH-3.5.4"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
-                    - unless @user.scoreentries.select{|entry| entry.variant == "0.6.3"}.empty?
-                        %li
-                            .trophyleft
-                                SporkHack
-                            .trophyright
-                                - for scoreentry in @user.scoreentries
-                                    - if scoreentry.variant == "0.6.3"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
-                    - unless @user.scoreentries.select{|entry| entry.variant == "NH-1.3d"}.empty?
-                        %li
-                            .trophyleft
-                                NetHack 1.3d
-                            .trophyright
-                                - for scoreentry in @user.scoreentries
-                                    - if scoreentry.variant == "NH-1.3d"
-                                        %a.imagelink{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
-                                            %img{:src => "/icons/" + scoreentry.icon, :alt => $trophy_names[scoreentry.trophy]}
+                    - for @variant in $variants
+                        =haml :user_trophies
+                    - @variant = "NH-1.3d"
+                    =haml :user_trophies
+
         .text_content.non_top_post
             =haml :_user_games
         .text_content.non_top_post
