--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -3,16 +3,16 @@
 .trophycabinet
     %h3 Cross-Variant
     %ul
-        - ["king_of_the_world", "anti_stoner", "globetrotter", "sightseeing_tour"].each do |individualtrophy|
+        - Trophy.cross_variant_trophies.each do |trophy|
             %li
-                - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", individualtrophy
-                - if users.size > 0
-                    %a.imagelink{:title => $trophy_names[individualtrophy], :href => "/trophies#" + users[0].icon[0 .. (users[0].icon.length - 5)]}
-                        %img.trophyleft{:src => "/icons/" + users[0].icon, :alt => $trophy_names[individualtrophy]}
-                    .trophyright
-                        - users.each do |u|
-                            %span
-                                %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
+                - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id, icon from individualtrophies where trophy = ? order by upper(user);", trophy.trophy
+                - icon = (users.size > 0) ? trophy.icon : trophy.light_icon
+                %a.imagelink{:title => trophy.text, :href => "/trophies##{trophy.anchor}"}
+                    %img.trophyleft{:src => "/icons/#{icon}", :alt => trophy.text}
+                .trophyright
+                    - users.each do |u|
+                        %span
+                            %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
 
 - $variants_mapping.each do |variant, variant_name|
     .trophycabinet
