--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -683,15 +683,6 @@ th.competition_placing {
     background-color: #dadada;
     text-decoration: none;
 }
-#clan_trophies .trophyicon {
-    margin-left: 5px;
-    margin-top: 5px;
-    background: #eee;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-}
-
 /**************************
 **                       **
 ** Display trophy images **
@@ -722,6 +713,18 @@ ul.trophypage > li > img,
     height: 35px;
     width: 35px;
 }
+
+/* exception for clan page trophies */
+#clan_trophies .trophyicon {
+    margin-left: 5px;
+    margin-top: 5px;
+    background: #eee;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+}
+
+
 /* vertically align text and images */
 .trophycabinet .trophyleft {
     vertical-align: middle;
@@ -748,10 +751,13 @@ ul.trophypage > li > img,
 .trophycabinet .trophyright, .trophycabinet .trophyleft {
     margin: 5px 0px 5px 5px;
 }
+.trophycabinet h2,
 .trophycabinet h3 {
     line-height: 2.5em;
 }
+.trophycabinet h2,
 .trophycabinet h3 {
+    margin-bottom: 0;
     border-bottom: 3px double #bbb;
 }
 .trophycabinet > ul li {
