Don't require ul > li for trophycabinet

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -760,6 +760,7 @@ ul.trophypage > li > img,
     margin-bottom: 0;
     border-bottom: 3px double #bbb;
 }
+.trophycabinet .endofcabinetrow,
 .trophycabinet > ul li {
     border-bottom: 1px solid #ccc;
 }
