--- a/views/deaths.haml
+++ b/views/deaths.haml
@@ -1,31 +1,35 @@
-.content_bulk
-  .text_content_wrapper
-    .text_content
-      %h2#deaths All deaths (unfiltered)
-      .scorelisting
-        %table.greytable.misc
-          %tr
-            %th Count
-            %th Death
-          - count = 0
-          - @deaths.each do |death|
-            - style = (count % 2) == 0 ? "cell1" : "cell2"
-            - count += 1
-            %tr{:id => style}
-              %td.table_number= death.count
-              %td= h death.death
-    .text_content.non_top_post
-      %h2#unique_deaths Unique deaths (filtered)
-      %h3= "(eligible for <a href='/trophies#clan-deaths'>Most unique deaths for Clan Competition</a>)"
-      .scorelisting
-        %table.greytable.misc
-          %tr
-            %th Count
-            %th Death
-          - count = 0
-          - @unique_deaths.each do |death|
-            - style = (count % 2) == 0 ? "cell1" : "cell2"
-            - count += 1
-            %tr{:id => style}
-              %td.table_number= death.count
-              %td= h death.death
+- cache_fragment(Game.max_endtime) do
+  - @deaths = repository.adapter.select "select death, count(1) as count from games where user_id is not null group by death order by count desc;"
+  - @unique_deaths = repository.adapter.select "select death, count(1) as count from normalized_deaths group by death order by count desc;"
+
+  .content_bulk
+    .text_content_wrapper
+      .text_content
+        %h2#deaths All deaths (unfiltered)
+        .scorelisting
+          %table.greytable.misc
+            %tr
+              %th Count
+              %th Death
+            - count = 0
+            - @deaths.each do |death|
+              - style = (count % 2) == 0 ? "cell1" : "cell2"
+              - count += 1
+              %tr{:id => style}
+                %td.table_number= death.count
+                %td= h death.death
+      .text_content.non_top_post
+        %h2#unique_deaths Unique deaths (filtered)
+        %h3= "(eligible for <a href='/trophies#clan-deaths'>Most unique deaths for Clan Competition</a>)"
+        .scorelisting
+          %table.greytable.misc
+            %tr
+              %th Count
+              %th Death
+            - count = 0
+            - @unique_deaths.each do |death|
+              - style = (count % 2) == 0 ? "cell1" : "cell2"
+              - count += 1
+              %tr{:id => style}
+                %td.table_number= death.count
+                %td= h death.death
