--- a/views/user.haml
+++ b/views/user.haml
@@ -4,10 +4,7 @@
             .text_content
                 %h2
                     #{h @player.login} @ junethack2011
-                    - if @player.games.length == 1
-                        | #{h @player.games.length} Game Played
-                    - else
-                        | #{h @player.games.length} Games Played
+                    #{@player.display_game_statistics}
                 - server_accounts = (Server.all - @player.servers)
                 %table.greytable
                     %tr
