--- a/views/games_played.haml
+++ b/views/games_played.haml
@@ -13,7 +13,7 @@
       - style = (count % 2) == 0 ? "cell1" : "cell2"
       - count += 1
       %tr{:id => style}
-        %td
+        %td{:id => "game-#{game.id}"}
           - if @games_played_user_links
             %a{:href => "/user_id/#{game.user_id}"}= h game.name
           - else
