Definition for start scumming games

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -11,6 +11,12 @@
           exploiting memory-corrupting bugs). If we catch you, we'll disqualify
           you. However, we don't consider some things such as pudding farming
           or bones stuffing to be cheating. Use common sense.
+        %p{:id => "startscumming"}
+          For this tournament,
+          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scumming games
+          are defined as games where the player escapes or quits within the first 10
+          turns. Such games are hidden on the games tables but are otherwise treated like
+          normal games.
         %p
           Streaks are sequences of non-overlapping games played on a single
           game server account, with no games in-between.
