--- a/views/user_trophies.haml
+++ b/views/user_trophies.haml
@@ -1,9 +1,21 @@
 %li
     .trophyleft= "#{$variants_mapping[@variant]}"
     .trophyright
-        - all_trophies = Trophy.user_trophies @variant
+        / user competition trophies
+        - trophies = Trophy.user_competition_trophies @variant
+        - user_competition_trophies = repository.adapter.select "select trophy from competition_score_entries where user_id = ? and variant = ? and rank = 1", @player.id, @variant
+        / only show if there are any
+        - if user_competition_trophies.size > 0 then
+            - for trophy in trophies
+                - icon = (user_competition_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
+                %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
+                    %img{:src => "/icons/" + icon, :alt => trophy.text}
+            %br
+
+        / user trophies
+        - trophies = Trophy.user_trophies @variant
         - user_trophies = repository.adapter.select "select trophy from scoreentries where user_id = ? and variant = ?", @player.id, @variant
-        - for trophy in all_trophies
+        - for trophy in trophies
             - icon = (user_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
             %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
                 %img{:src => "/icons/" + icon, :alt => trophy.text}
