--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -1,7 +1,7 @@
 %h2
     Trophies
 .trophycabinet
-    %h3 Cross-Variant
+    %h3{:id => "cross-variant"} Cross-Variant
     %ul
         - Trophy.cross_variant_trophies.each do |trophy|
             %li
@@ -17,7 +17,7 @@
 - ($variants+["NH-1.3d"]).each do |variant|
     - variant_name = $variants_mapping[variant]
     .trophycabinet
-        %h3= variant_name
+        %h3{:id => variant}= variant_name
         %ul
             - trophies = Trophy.user_trophies variant
             - trophies.each do |trophy|
