--- a/views/clan.haml
+++ b/views/clan.haml
@@ -27,7 +27,8 @@
           Clan trophies
         / TODO: trophy image for clan competition winner
         - ClanScoreEntry.all(:clan_name => @clan.name, :trophy.not => 'clan_winner', :rank => 1).each do |trophy|
-          %a.imagelink{:href => "/trophies#" + trophy.icon[0 .. (trophy.icon.length - 5)], :title => trophy.trophy} 
+          - trophy = Trophy.first :trophy => trophy.trophy
+          %a.imagelink{:href => "/trophies#" + trophy.anchor, :title => trophy.text}
             %img.trophyicon{:src => "/icons/" + trophy.icon}
         %span.clear.endofcabinetrow
     .text_content.non_top_post#clan_members
