Add tournament period more prominently on the index page

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -1,4 +1,5 @@
 .content_bulk
+  %div.hcenter{:style => "margin: 1.75em; font-weight: bold; font-size: 1.25em;"} Running from July 17th until the end of August 14th 2011
   - if @logged_in
     .signup_text
       %p
