Clarify rules regarding "All Conducts/Roles/Races/Alignments/Genders"

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -29,7 +29,7 @@
             %span
               King of the world: ascend in all variants
 
-        %p{:style => "font-size: 0.9em;"} "All variants" means Vanilla NetHack, SporkHack, UnNetHack and AceHack. NetHack 1.3d does not contribute to the completion of these trophies.
+        %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack and AceHack. NetHack 1.3d does not contribute to the completion of these trophies.
 
         .text_content.non_top_post
         %h3
@@ -37,6 +37,8 @@
         %p
           These trophies apply separately to each variant (excluding NetHack
           1.3d). Each is worth one point.
+          %br
+          %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
         %ul.trophypage
           %li#all-conducts
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-conducts.png"}
