--- a/views/user_trophies.haml
+++ b/views/user_trophies.haml
@@ -12,6 +12,17 @@
                     %img{:src => "/icons/" + icon, :alt => trophy.text}
             %br
 
+        / user "All Conducts/Roles/Races/Alignments/Genders" trophies
+        - trophies = Trophy.user_all_stuff_trophies @variant
+        - user_all_stuff_trophies = repository.adapter.select "select trophy from scoreentries where user_id = ? and variant = ?", @player.id, @variant
+        / only show if there are any
+        - if user_all_stuff_trophies.size > 0 then
+            - for trophy in trophies
+                - icon = (user_all_stuff_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
+                %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
+                    %img{:src => "/icons/" + icon, :alt => trophy.text}
+            %br
+
         / user trophies
         - trophies = Trophy.user_trophies @variant
         - user_trophies = repository.adapter.select "select trophy from scoreentries where user_id = ? and variant = ?", @player.id, @variant
