--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -19,6 +19,20 @@
     .trophycabinet
         %h3{:id => variant}= variant_name
         %ul
+            - count = Trophy.achieved_user_all_stuff_trophies_count variant
+            - if count > 1
+                - trophies = Trophy.user_all_stuff_trophies variant
+                - trophies.each do |trophy|
+                    %li
+                        - users = repository.adapter.select "select (select login from users where user_id = id) as user, user_id from scoreentries where variant = ? and trophy = ? order by upper(user);", variant, trophy.trophy
+                        - icon = (users.size > 0) ? trophy.icon : trophy.light_icon
+                        %a.imagelink{:title => trophy.text, :href => "/trophies##{trophy.anchor}"}
+                            %img.trophyleft{:src => "/icons/#{icon}", :alt => trophy.text}
+                        .trophyright
+                            - users.each do |u|
+                                %span
+                                    %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
+
             - trophies = Trophy.user_trophies variant
             - trophies.each do |trophy|
                 %li
