--- a/views/splash.haml
+++ b/views/splash.haml
@@ -1,6 +1,6 @@
 .content_bulk
   %div.hcenter{:style => "margin: 1.75em; font-weight: bold; font-size: 1.25em;"} Running from July 17th until the end of August 14th 2011
-  - if @logged_in
+  - if @logged_in and (Time.new.to_i < $tournament_endtime)
     .signup_text
       %p
         %a{:href => "register"} Sign up now!
