--- a/views/news.haml
+++ b/views/news.haml
@@ -1,6 +1,7 @@
 %h2
   News and Info
 %ul
+  %li= "<b>2011-08-15</b>: <a href='http://groups.google.com/group/rec.games.roguelike.nethack/browse_frm/thread/28afe0b5182547e9'>Tournament post mortem</a>."
   %li= "<b>2011-07-29</b>: New tropies added: <a href='/trophies#anti-stoner'>Anti-Stoner</a> and <a href='/trophies#escapologist'>Escapologist</a>."
   %li= "<b>2011-07-25</b>: New page showing <a href='/ascensions'>all ascensions</a> added."
   %li= "<b>2011-07-23</b>: We are on <a href='http://games.slashdot.org/story/11/07/22/2338215/First-NetHack-Cross-Variant-Summer-Tournament'>Slashdot</a>! Because of this the number of registered users has almost doubled!"
