--- a/views/activity.haml
+++ b/views/activity.haml
@@ -5,34 +5,43 @@
       .text_content
         %h2 Ascensions per Day
         .scorelisting
+          %img{:src => "tmp/activity.png", :style => "float: right"}
           %table.greytable.misc
             %tr
               %th Date (UTC)
               %th
+            - graph = Graph.new
             - count = 0
             - @ascensions_per_day.each do |game|
+              - graph.add_data_point(game.datum, game.count)
               - style = (count % 2) == 0 ? "cell1" : "cell2"
               - count += 1
               %tr{:id => style}
                 %td.table_date= h game.datum
                 %td.table_number= game.count
+          - graph.write("activity.png")
+
 
     - cache_fragment("games_#{Game.max_endtime}") do
       - @finished_games_per_day = repository.adapter.select "select datum, count(1) as count from (select date(endtime, 'unixepoch') as datum from games where user_id is not null) group by datum order by datum asc;"
       .text_content.non_top_post
         %h2 Finished Games per Day
+        %img{:src => "tmp/finished_games_per_day.png", :style => "float: right"}
         .scorelisting
           %table.greytable.misc
             %tr
               %th Date (UTC)
               %th
+            - graph = Graph.new
             - count = 0
             - @finished_games_per_day.each do |game|
+              - graph.add_data_point(game.datum, game.count)
               - style = (count % 2) == 0 ? "cell1" : "cell2"
               - count += 1
               %tr{:id => style}
                 %td.table_date= h game.datum
                 %td.table_number= game.count
+          - graph.write("finished_games_per_day.png")
 
     - cache_fragment("users_#{User.max_created_at}") do
       - @new_users_per_day = repository.adapter.select "select date, count(1) as count from (select date(created_at) as date from users where created_at is not null) group by date order by date asc;"
