Update dates for 2012 tournament.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -1,5 +1,5 @@
 .content_bulk
-  %div.hcenter{:style => "margin: 1.75em; font-weight: bold; font-size: 1.25em;"} Running from July 17th until the end of August 14th 2011
+  %div.hcenter{:style => "margin: 1.75em; font-weight: bold; font-size: 1.25em;"} Running from 1 June until the end of 30 June 2012
   - if @logged_in and (Time.new.to_i < $tournament_endtime)
     .signup_text
       %p
@@ -41,7 +41,7 @@
         What's
         %a{:href => "about"} this all about?
       %p
-        The tournament starts July 17th at UTC midnight and runs until 
-        the end of August 14th.
+	The tournament starts 1 June 2012 at UTC midnight and runs until
+	the end of 30 June 2012.
     %span#end_of_content_spacer.clear
 / end of container
