One more date update to about page.

--- a/views/about.haml
+++ b/views/about.haml
@@ -2,9 +2,7 @@
   .text_content_wrapper
     .text_content
       %p
-        This is NetHack Summer tournament. It runs from July 17th midnight
-        at UTC midnight (running through all of 17th) and ends at August 14th
-        (also running through all of 14th).
+        This is NetHack Summer tournament. It runs annually during June.
       %p
         NetHack is a classic roguelike game. If you don't what that is, try using
         a Google search.
