Clean up and expand the section on cheating on the rules page.

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -3,14 +3,57 @@
     .text_content
       %h1
         Rules and scoring
+      %h2
+        Cheating
       %p
         %p
-          No cheating on game servers account registered to the tournament
-          (examples of cheating include hacking a server to add fake games,
-          abusing PRNG vulnerabilities to predict the future state of a game,
-          exploiting memory-corrupting bugs). If we catch you, we'll disqualify
-          you. However, we don't consider some things such as pudding farming
-          or bones stuffing to be cheating. Use common sense.
+          Don't cheat.
+        %p
+          What exactly is cheating and what is not is not always clear.
+          The tournament staff makes the final decision. Here is a list of
+          some things we consider cheating.
+        %p
+          %li
+            Crack into one of the game servers and add fake games or bones.
+          %li
+            Exploit vulnerabilities in a weak random number generator in order
+            to attain achievements in the tournament.
+          %li
+            Exploiting memory corrupting bugs for the same goal.
+          %li
+            Using disconnection at critical spots to hide a death from logs.
+        %p
+          Here are some things that we don't consider cheating (although some
+          of them may be against the spirit of the game).
+        %p
+          %li
+            Pudding farming.
+          %li
+            Start scumming.
+          %li
+            Looking at player dumplogs to see what items a bones pile has.
+          %li
+            Similarly, examining ttyrecs to find items or to recover memory 
+            from amnesia.
+          %li
+            Using NetHack playing bots or so called "augmentation" tools 
+            like Interhack.
+          %li
+            Exploiting well known game bugs (such as Astral call, floating
+            wand wresting trick, gold duplication bug, artifact naming trick,
+            etc.) Some of these may be fixed on some servers.
+          %li
+            In general we don't consider cheating any things you do within the
+            "rules" of the game.
+        %p
+          If we catch you cheating, expect some form of punishment.
+        %p
+          We haven't had any blatant cheating incidents in the past. Just use 
+          common sense and you will be fine.
+        .text_content.non_top_post
+      %h2
+        Other things
+      %p
         %p{:id => "startscumming"}
           For this tournament,
           %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scumming games
