Put all the items in cheating list in gerund.

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -14,10 +14,10 @@
           some things we consider cheating.
         %p
           %li
-            Crack into one of the game servers and add fake games or bones.
+            Cracking into one of the game servers and add fake games or bones.
           %li
-            Exploit vulnerabilities in a weak random number generator in order
-            to attain achievements in the tournament.
+            Exploiting vulnerabilities in a weak random number generator in 
+            order to attain achievements in the tournament.
           %li
             Exploiting memory corrupting bugs for the same goal.
           %li
