--- a/views/rules.haml
+++ b/views/rules.haml
@@ -14,7 +14,7 @@
           some things we consider cheating.
         %p
           %li
-            Cracking into one of the game servers and add fake games or bones.
+            Cracking into one of the game servers and adding fake games or bones.
           %li
             Exploiting vulnerabilities in a weak random number generator in 
             order to attain achievements in the tournament.
