--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -290,6 +290,15 @@ submenus
     margin-top: 2.5em;
 }
 
+/* The text below the logo on the front page. */
+.title_text {
+    margin: 1.75em;
+    font-weight: bold;
+    font-size: 1.25em;
+    clear: both;
+    text-align: center;
+}
+
 /**************************
 **                       **
 **     signup styles     **
