--- a/views/register.haml
+++ b/views/register.haml
@@ -3,6 +3,8 @@
     .text_content
       - if (Time.new.to_i > $tournament_endtime)
         %h1.hcenter Sorry, this year's tournament year has ended.
+      - elsif (Time.new.to_i < $tournament_signupstarttime)
+        %h1.hcenter Sorry, registration opens in 1 May.
       - else
         %form#register_form{:action => "/create", :method => "post"}
           %fieldset
