--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -87,7 +87,22 @@ a.imagelink:hover {
 /* topnav */
 .text_content_wrapper, #topnav {
     background-color: #ddd;
-    background-image: url('gradientti.png');
+    background-image: linear-gradient(left , rgb(255,255,255) 0%, rgb(221,221,221) 15%, rgb(221,221,221) 85%, rgb(255,255,255) 100%);
+    background-image: -o-linear-gradient(left , rgb(255,255,255) 0%, rgb(221,221,221) 15%, rgb(221,221,221) 85%, rgb(255,255,255) 100%);
+    background-image: -moz-linear-gradient(left , rgb(255,255,255) 0%, rgb(221,221,221) 15%, rgb(221,221,221) 85%, rgb(255,255,255) 100%);
+    background-image: -webkit-linear-gradient(left , rgb(255,255,255) 0%, rgb(221,221,221) 15%, rgb(221,221,221) 85%, rgb(255,255,255) 100%);
+    background-image: -ms-linear-gradient(left , rgb(255,255,255) 0%, rgb(221,221,221) 15%, rgb(221,221,221) 85%, rgb(255,255,255) 100%);
+
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        color-stop(0.15, rgb(255,255,255)),
+        color-stop(0.35, rgb(221,221,221)),
+        color-stop(0.65, rgb(221,221,221)),
+        color-stop(0.85, rgb(255,255,255))
+    );
+
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
