Add results of the 2011 tournament link to the splash page.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -30,6 +30,9 @@
       =haml :news
     .text_content.non_top_post
       %p
+        You can view the results of the 2011 tournament at the
+        %a{:href => "http://junethack-2011.rawrnix.com/"} Junethack 2011 site.
+      %p
         You can view the tournament rules at the 
         %a{:href => "/rules"} Rules page.
       %p
