--- a/views/servers.haml
+++ b/views/servers.haml
@@ -33,28 +33,15 @@
             &nbsp;
         %tr
           %td
-            acehack.rawrnix.com
+            acehack.eu
           %td
-            %a{:href => "/server/arc"} ARC
+            %a{:href => "/server/aeu"} AEU
           %td
             acehack
           %td
             &nbsp;
           %td
             rawrmage
-          %td
-            &nbsp;
-        %tr
-          %td
-            acehack.sovrappensiero.info
-          %td
-            %a{:href => "/server/asi"} ASI
-          %td
-            acehack
-          %td
-            &nbsp;
-          %td
-            kerio
           %td
             &nbsp;
         %tr
@@ -98,32 +85,6 @@
             &nbsp;
         %tr
           %td
-            us.un.nethack.nu
-          %td
-            %a{:href => "/server/uun"} UUN
-          %td
-            unnethack
-          %td
-            &nbsp;
-          %td
-            blister
-          %td
-            &nbsp;
-        %tr
-          %td
-            acehack.sovrappensiero.info
-          %td
-            %a{:href => "/server/n13"} N13
-          %td
-            nethack 1.3d
-          %td
-            &nbsp;
-          %td
-            kerio
-          %td
-            &nbsp;
-        %tr
-          %td
             nethack.eu
           %td
             %a{:href => "/server/neu"} NEU
@@ -135,6 +96,17 @@
             blackpenguin
           %td
             &nbsp;
-
-
+        %tr
+          %td
+            grunthack.org
+          %td
+            %a{:href => "/server/gho"} GHO
+          %td
+            grunthack
+          %td
+            &nbsp;
+          %td
+            Grunt
+          %td
+            &nbsp;
       %span#end_of_content_spacer.clear
