--- a/views/activity.haml
+++ b/views/activity.haml
@@ -1,7 +1,9 @@
 .content_bulk
   .text_content_wrapper
     - cache_fragment("ascensions_#{Game.max_ascended_endtime}") do
-      - @ascensions_per_day = repository.adapter.select "select datum, count(1) as count from (select date(endtime, 'unixepoch') as datum from games where user_id is not null and ascended='t') group by datum order by datum asc;"
+      // Ugly SQL to also get days with zero ascensions. Will only work
+      // as long there are any games for each day
+      - @ascensions_per_day = repository.adapter.select "select days.datum, endtime, count from (select endtime, date(endtime, 'unixepoch') as datum from games group by datum) days left join (select datum, count(1) as count from (select date(endtime, 'unixepoch') as datum from games where user_id is not null and ascended='t') group by datum) counts on counts.datum = days.datum;"
       .text_content
         %h2 Ascensions per Day
         .scorelisting
@@ -18,7 +20,7 @@
               - count += 1
               %tr{:id => style}
                 %td.table_date= h game.datum
-                %td.table_number= game.count
+                %td.table_number= game.count ? game.count : 0
           - graph.write("activity.png")
 
 
@@ -44,7 +46,8 @@
           - graph.write("finished_games_per_day.png")
 
     - cache_fragment("users_#{User.max_created_at}") do
-      - @new_users_per_day = repository.adapter.select "select date, count(1) as count from (select date(created_at) as date from users where created_at is not null) group by date order by date asc;"
+      // same comment as for @ascensions_per_day applies
+      - @new_users_per_day = repository.adapter.select "select days.date, endtime, count from (select endtime, date(endtime, 'unixepoch') as date from games group by date) days left join (select date, count(1) as count from (select date(created_at) as date from users where created_at is not null) group by date) counts on counts.date = days.date;"
       .text_content.non_top_post
         %h2 New Users per Day
         .scorelisting
@@ -58,4 +61,4 @@
               - count += 1
               %tr{:id => style}
                 %td.table_date= h game.date
-                %td.table_number= game.count
+                %td.table_number= game.count ? game.count : 0
